--- a/jia2015/index.html
+++ b/jia2015/index.html
@@ -24,7 +24,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#">JIA2015 Córdoba 2015</a>
+          <a class="navbar-brand" href="#">JIA2015 Córdoba 2015 - ISBN:978-84-608-3043-6</a>
         </div>
 
         <div id="navbar" class="navbar-collapse collapse">
