--- a/jia2015/index.html
+++ b/jia2015/index.html
@@ -55,6 +55,38 @@
     	</div>
 
 
+    <!--
+    <center><h1><span class="label label-primary">Conferencias Inaugurales</span></h1></center>
+    <div class="container">
+      <div class="row">
+        <div class="col-md-3">
+          <h4 class="alert alert-info">Hydraulic engineering and roman aqueducts: modern perspectives</h4>
+          <p>Prof. Dr. Hubert Chanson.</p>
+          <p><em>The University of Queensland, Brisbane, Australia</em></p>
+          <p><a class="btn btn-default" href="#" role="button">Ver documento &raquo;</a></p>
+        </div>
+        <div class="col-md-3">
+          <h4 class="alert alert-info">Abriendo surcos al agua</h4>
+          <p>Prof. Dr. Alberto Losada Villasante</p>
+          <p><em>Universidad Politécnica de Madrid</em></p>
+          <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
+       </div>
+        <div class="col-md-3">
+          <h4 class="alert alert-info">Predicción estacional del caudal de los riós ibéricos a partir de índices climáticos</h4>
+          <p>Profa. Dra. María Jesús Esteban Parra.</p>
+          <p><em>Universidad de Granada</em></p>
+          <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
+        </div>
+        <div class="col-md-3">
+          <h4 class="alert alert-info">Procesos erosivos en olivar en Andalucía a diferentes escalas: entendimiento, magnitud, implicaciones e intentos de control</h4>
+          <p>Dr. José Alfonso Gómez Calero.</p>
+          <p><em>Instituto de Agricultura Sostenible - CSIC</em></p>
+          <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
+        </div>
+      </div>
+      <hr/>
+    -->
+
 
       <!-- Selecciona la búsqueda por Título (atributo: nombre) -->
     	<div ng-show="orden == 'nombre'" class="container" ng-repeat="articulo in almacen.indice | filter: {nombre: busco}">
