Actualizo Indice de Ejercicios/Código

--- a/curso2015/index.html
+++ b/curso2015/index.html
@@ -1,1 +1,29 @@
-<meta http-equiv="refresh" content="0; url=http://jcheca.github.io/curso2015/ejercicios/ej01-repaso-general-mod" />
+<!doctype html>
+<html lang="es">
+<head>
+	<meta charset="UTF-8">
+	<title>Indice de Ejercicios 2015</title>
+</head>
+<body>
+
+<h3>Curso 2015</h3>
+
+<ul>
+	<li><a href="ejercicios/ej01-repaso-general/index.html">[01] Ejercicio de Repaso</a>&nbsp;<a href="https://github.com/jcheca/jcheca.github.io/tree/master/curso2015/ejercicios/ej01-repaso-general">Código</a></li>
+	
+	<li><a href="ejercicios/ej01-repaso-general-mod/index.html">[01] Ejercicio de Repaso-Modificado</a>&nbsp;<a href="https://github.com/jcheca/jcheca.github.io/tree/master/curso2015/ejercicios/ej01-repaso-general-mod">Código</a></li>
+	
+	<li><a href="ejercicios/eje02-figure-details/index.html">[02] figure/details</a>&nbsp;<a href="https://github.com/jcheca/jcheca.github.io/tree/master/curso2015/ejercicios/eje02-figure-details">Código</a></li>
+	
+	<li><a href="ejercicios/ej03-mark-time-meter/index.html">[03] mark/time/meter</a>&nbsp;<a href="https://github.com/jcheca/jcheca.github.io/tree/master/curso2015/ejercicios/ej03-mark-time-meter">Código</a></li>
+	
+	<li><a href="ejercicios/ej04-progress/index.html">[04] progress</a>&nbsp;<a href="https://github.com/jcheca/jcheca.github.io/tree/master/curso2015/ejercicios/ej04-progress">Código</a></li>
+
+
+
+
+</ul>	
+
+
+</body>
+</html>
