--- a/curso2015/index.html
+++ b/curso2015/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 
-<h3>Curso 2015</h3>
+<h3>Curso 2015 [Updated: 16.11.2015]</h3>
 
 <ul>
 	<li><a href="ejercicios/ej01-repaso-general/index.html">[01] Ejercicio de Repaso</a>&nbsp;<a href="https://github.com/jcheca/jcheca.github.io/tree/master/curso2015/ejercicios/ej01-repaso-general">Código</a></li>
@@ -30,6 +30,34 @@
 	<li><a href="ejercicios/ej09-canvas/index.html">[09] Canvas</a>&nbsp;<a href="https://github.com/jcheca/jcheca.github.io/tree/master/curso2015/ejercicios/ej09-canvas">Código</a></li>
 	
 </ul>	
+
+
+
+<h3>Información de Interés.</h3>
+
+<p>Templates:
+<ul>
+	<li><a href="https://html5boilerplate.com" target="_blank">html5boilerplate (Básico)</a></li>
+	<li><a href="http://www.initializr.com" target="_blank">Initializr (Customizable)</a></li>
+</ul>
+
+<p>Frameworks:
+<ul>
+	<li><a href="http://getbootstrap.com" target="_blank">Bootstrap (Twitter)</a></li>
+	<li><a href=" https://angularjs.org" target="_blank">Angular JS (Google)</a></li>
+</ul>
+
+<p>Recursos:
+<ul>
+	<li><a href="http://html5demos.com/" target="_blank">html5demos.com</a></li>
+	<li><a href="http://www.slideshare.net/paradigmatecnologico/introduccin-a-html5-y-css3" target="_blank">HTML5/CSS</a></li>
+
+</ul>
+
+<p>Editores:
+<ul>
+	<li><a href="http://www.sublimetext.com" target="_blank">Sublimetext</a></li>
+</ul>
 
 
 </body>
