--- a/curso2015/index.html
+++ b/curso2015/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 
-<h3>Curso 2015 [Updated: 16.11.2015]</h3>
+<h3>Curso 2015 [Updated: 17.11.2015]</h3>
 
 <ul>
 	<li><a href="ejercicios/ej01-repaso-general/index.html">[01] Ejercicio de Repaso</a>&nbsp;<a href="https://github.com/jcheca/jcheca.github.io/tree/master/curso2015/ejercicios/ej01-repaso-general">Código</a></li>
@@ -28,6 +28,12 @@
 	<li><a href="ejercicios/ej08-svg/index.html">[08] SVG</a>&nbsp;<a href="https://github.com/jcheca/jcheca.github.io/tree/master/curso2015/ejercicios/ej08-svg">Código</a></li>
 
 	<li><a href="ejercicios/ej09-canvas/index.html">[09] Canvas</a>&nbsp;<a href="https://github.com/jcheca/jcheca.github.io/tree/master/curso2015/ejercicios/ej09-canvas">Código</a></li>
+
+	<li><a href="ejercicios/ej10-geolocation/index.html">[10] Geolocation</a>&nbsp;<a href="https://github.com/jcheca/jcheca.github.io/tree/master/curso2015/ejercicios/ej10-geolocation">Código</a></li>
+
+	<li><a href="ejercicios/ej11-drag-and-drop/index.html">[11] Drag&Drop</a>&nbsp;<a href="https://github.com/jcheca/jcheca.github.io/tree/master/curso2015/ejercicios/ej11-drag-and-drop">Código</a></li>
+
+	<li><a href="ejercicios/ej12-file/index.html">[12] File API</a>&nbsp;<a href="https://github.com/jcheca/jcheca.github.io/tree/master/curso2015/ejercicios/ej12-file">Código</a></li>
 	
 </ul>	
 
@@ -51,6 +57,7 @@
 <ul>
 	<li><a href="http://html5demos.com/" target="_blank">html5demos.com</a></li>
 	<li><a href="http://www.slideshare.net/paradigmatecnologico/introduccin-a-html5-y-css3" target="_blank">HTML5/CSS</a></li>
+	<li><a href="https://developers.google.com/maps/documentation/static-maps/intro" target="_blank">Google Static Maps API</a></li>
 
 </ul>
 
