--- a/curso2015/index.html
+++ b/curso2015/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 
-<h3>Curso 2015 [Updated: 17.11.2015]</h3>
+<h3>Curso 2015 [Updated: 19.11.2015]</h3>
 
 <ul>
 	<li><a href="ejercicios/ej01-repaso-general/index.html">[01] Ejercicio de Repaso</a>&nbsp;<a href="https://github.com/jcheca/jcheca.github.io/tree/master/curso2015/ejercicios/ej01-repaso-general">Código</a></li>
@@ -34,7 +34,15 @@
 	<li><a href="ejercicios/ej11-drag-and-drop/index.html">[11] Drag&Drop</a>&nbsp;<a href="https://github.com/jcheca/jcheca.github.io/tree/master/curso2015/ejercicios/ej11-drag-and-drop">Código</a></li>
 
 	<li><a href="ejercicios/ej12-file/index.html">[12] File API</a>&nbsp;<a href="https://github.com/jcheca/jcheca.github.io/tree/master/curso2015/ejercicios/ej12-file">Código</a></li>
+
+	<li><a href="ejercicios/ej13-json/index.html">[13] JSON</a>&nbsp;<a href="https://github.com/jcheca/jcheca.github.io/tree/master/curso2015/ejercicios/ej13-json">Código</a></li>
 	
+	<li><a href="ejercicios/ej14-ajax-y-json/index.html">[14] Ajax+JSON</a>&nbsp;<a href="https://github.com/jcheca/jcheca.github.io/tree/master/curso2015/ejercicios/ej14-ajax-y-json">Código</a></li>
+
+	<li><a href="ejercicios/ej15-web-storage/local.html">[15a] Local Storage</a>&nbsp;<a href="https://github.com/jcheca/jcheca.github.io/tree/master/curso2015/ejercicios/ej15-web-storage">Código</a></li>
+
+	<li><a href="ejercicios/ej15-web-storage/session.html">[15b] Session Storage</a>&nbsp;<a href="https://github.com/jcheca/jcheca.github.io/tree/master/curso2015/ejercicios/ej15-web-storage">Código</a></li>
+
 </ul>	
 
 
