--- a/curso2015/index.html
+++ b/curso2015/index.html
@@ -58,7 +58,10 @@
 <p>Frameworks:
 <ul>
 	<li><a href="http://getbootstrap.com" target="_blank">Bootstrap (Twitter)</a></li>
-	<li><a href=" https://angularjs.org" target="_blank">Angular JS (Google)</a></li>
+	<li><a href="https://angularjs.org" target="_blank">Angular JS (Google)</a></li>
+	<li><a href="https://material.angularjs.org/latest" target="_blank">Material Design in Angular JS (Google)</a></li>
+	<li><a href="http://www.getmdl.io/index.html" target="_blank">Material Design Lite</a></li>
+
 </ul>
 
 <p>Recursos:
@@ -66,7 +69,7 @@
 	<li><a href="http://html5demos.com/" target="_blank">html5demos.com</a></li>
 	<li><a href="http://www.slideshare.net/paradigmatecnologico/introduccin-a-html5-y-css3" target="_blank">HTML5/CSS</a></li>
 	<li><a href="https://developers.google.com/maps/documentation/static-maps/intro" target="_blank">Google Static Maps API</a></li>
-
+	<li><a href="http://www.responsinator.com" target="_blank">Test Responsive Sites</a></li>
 </ul>
 
 <p>Editores:
