--- a/curso2015/index.html
+++ b/curso2015/index.html
@@ -43,6 +43,12 @@
 
 	<li><a href="ejercicios/ej15-web-storage/session.html">[15b] Session Storage</a>&nbsp;<a href="https://github.com/jcheca/jcheca.github.io/tree/master/curso2015/ejercicios/ej15-web-storage">Código</a></li>
 
+	<li><a href="ejercicios/ej16-transformaciones-css3/index.html">[16] Transformaciones</a>&nbsp;<a href="https://github.com/jcheca/jcheca.github.io/tree/master/curso2015/ejercicios/ej16-transformaciones-css3">Código</a></li>
+
+	<li><a href="ejercicios/ej17-transiciones-css3/index.html">[17] Transiciones</a>&nbsp;<a href="https://github.com/jcheca/jcheca.github.io/tree/master/curso2015/ejercicios/ej17-transiciones-css3">Código</a></li>
+
+	<li><a href="ejercicios/ej18-animaciones-css3/index.html">[18] Animaciones</a>&nbsp;<a href="https://github.com/jcheca/jcheca.github.io/tree/master/curso2015/ejercicios/ej18-animaciones-css3">Código</a></li>
+
 </ul>	
 
 
