--- a/curso2015/ejercicios/ej18-animaciones-css3/index.html
+++ b/curso2015/ejercicios/ej18-animaciones-css3/index.html
@@ -16,7 +16,10 @@
 
 		/* Chrome, Safari, Opera */ 
 		-webkit-animation-name: ejemplo; 
-		-webkit-animation-duration: 4s;
+		-webkit-animation-duration: 5s;
+		-webkit-animation-direction: reverse;
+		-webkit-iteration-count: infinite;
+
 		animation-name: ejemplo;
 		animation-duration: 5s;
 		animation-direction: reverse;
@@ -52,12 +55,7 @@
 
 	<h1>Animaciones (Reverse | Infinite)</h1>
 
-
 	<div><img src="images/pollo.jpg" alt="Pollo"><p>Animate</p></div>
-
-
-
-
 
 
 </body>
