--- a/curso2015/index.html
+++ b/curso2015/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 
-<h3>Curso 2015 [Updated: 24.11.2015]</h3>
+<h3>Curso 2015 [Updated: 26.11.2015]</h3>
 
 <ul>
 	<li><a href="ejercicios/ej01-repaso-general/index.html">[01] Ejercicio de Repaso</a>&nbsp;<a href="https://github.com/jcheca/jcheca.github.io/tree/master/curso2015/ejercicios/ej01-repaso-general">Código</a></li>
@@ -48,6 +48,13 @@
 	<li><a href="ejercicios/ej17-transiciones-css3/index.html">[17] Transiciones</a>&nbsp;<a href="https://github.com/jcheca/jcheca.github.io/tree/master/curso2015/ejercicios/ej17-transiciones-css3">Código</a></li>
 
 	<li><a href="ejercicios/ej18-animaciones-css3/index.html">[18] Animaciones</a>&nbsp;<a href="https://github.com/jcheca/jcheca.github.io/tree/master/curso2015/ejercicios/ej18-animaciones-css3">Código</a></li>
+
+	<li><a href="ejercicios/ej19-bootstrap-grid/index.html">[19] Bootstrap (Grid)</a>&nbsp;<a href="https://github.com/jcheca/jcheca.github.io/tree/master/curso2015/ejercicios/ej19-bootstrap-grid">Código</a></li>
+
+	<li><a href="ejercicios/ej20-bootstrap-styling/index.html">[20] Bootstrap (Styling)</a>&nbsp;<a href="https://github.com/jcheca/jcheca.github.io/tree/master/curso2015/ejercicios/ej20-bootstrap-styling">Código</a></li>
+
+	<li><a href="ejercicios/ej21-bootstrap-form/index.html">[21] Bootstrap (Form)</a>&nbsp;<a href="https://github.com/jcheca/jcheca.github.io/tree/master/curso2015/ejercicios/ej21-bootstrap-form">Código</a></li>
+
 
 </ul>	
 
