--- a/curso2015/index.html
+++ b/curso2015/index.html
@@ -61,6 +61,8 @@
 
 	<li><a href="ejercicios/ej24-photoswipe/index.html">[23] PhotoSwipe.JS</a>&nbsp;<a href="https://github.com/jcheca/jcheca.github.io/tree/master/curso2015/ejercicios/ej24-photoswipe">Código</a></li>
 
+	<li><a href="ejercicios/ej25-repaso/index.html">[24] Repaso General</a>&nbsp;<a href="https://github.com/jcheca/jcheca.github.io/tree/master/curso2015/ejercicios/ej25-repaso">Código</a></li>
+
 </ul>	
 
 
