--- a/curso2015/ejercicios/ej25-repaso/index.html
+++ b/curso2015/ejercicios/ej25-repaso/index.html
@@ -8,6 +8,21 @@
 	<link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script> 
 	<script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
+
+	<style type="text/css">
+	#picScale:hover {
+		/* IE 9 */
+		-ms-transform: scale(20deg);
+		/* Safari */	
+		-webkit-transform: scale(20deg);
+		transform: scale(1.2,1.5);
+		transition: transform 2s;
+	}
+	</style>
+
+
+
+
 </head>
 
 <body>
@@ -81,7 +96,7 @@
 
 					<center>
 					<figure style="text-align: center;">
-					<img src="media/nexus5.jpeg" alt="El Nexus 5"/>
+					<img id="picScale" src="media/nexus5.jpeg" alt="El Nexus 5"/>
 					<figcaption>Google Nexus 5</figcaption>
 					</figure>
 					</center>
@@ -103,10 +118,10 @@
 					<div class="panel-heading ">Otros Smartphones que te puedan interesar.</div>
 					<div class="panel-body">
 
-					<div class="col-sm-3"><img src="media/nokia.jpeg" width="100px"  height="100px"></div>
-					<div class="col-sm-3"><img src="media/siemens.jpg" width="100px"  height="100px"></div>
-					<div class="col-sm-3"><img src="media/lg.jpg" width="100px" height="100px"></div>
-					<div class="col-sm-3"><img src="media/ericson.jpg" width="100px"  height="100px"></div>
+					<div class="col-sm-3"><img id="picScale" src="media/nokia.jpeg" width="100px"  height="100px"></div>
+					<div class="col-sm-3"><img id="picScale" src="media/siemens.jpg" width="100px"  height="100px"></div>
+					<div class="col-sm-3"><img id="picScale" src="media/lg.jpg" width="100px" height="100px"></div>
+					<div class="col-sm-3"><img id="picScale" src="media/ericson.jpg" width="100px"  height="100px"></div>
 
 
 
