--- a/curso2015/ejercicios/ej25-repaso/ofertas.html
+++ b/curso2015/ejercicios/ej25-repaso/ofertas.html
@@ -177,10 +177,10 @@
 				<div class="panel-heading ">Siguenos</div>
 				<div class="panel-body">
   					<div class="btn-group-vertical" role="group" aria-label="...">
-   						<p><a class="btn btn-default btn-lg" href="#" role="button">Facebook</a></p>
-   						<p><a class="btn btn-default btn-lg" href="#" role="button">&nbsp;&nbsp;Twitter&nbsp;&nbsp;&nbsp;</a></p>
-   						<p><a class="btn btn-default btn-lg" href="#" role="button">&nbsp;&nbsp;&nbsp;&nbsp;RSS&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</a></p>
-   						<p><a class="btn btn-default btn-lg" href="#" role="button">&nbsp;&nbsp;&nbsp;E-Mail&nbsp;&nbsp;&nbsp;</a></p>
+   						<p><a class="btn btn-default btn-lg btn-block" href="#" role="button">Facebook</a></p>
+   						<p><a class="btn btn-default btn-lg btn-block" href="#" role="button">Twitter</a></p>
+   						<p><a class="btn btn-default btn-lg btn-block" href="#" role="button">RSS</a></p>
+   						<p><a class="btn btn-default btn-lg btn-block" href="#" role="button">E-Mail</a></p>
 					</div>
 				</div>
 				</div>
