--- a/curso2015/ejercicios/ej25-repaso/contactos.html
+++ b/curso2015/ejercicios/ej25-repaso/contactos.html
@@ -42,7 +42,7 @@
 			  <ul class="nav navbar-nav navbar-left">
 			    <!-- La clase active informa al usuario de que dicho elemento es la pagina actual que se esta visualizando en su navegador -->
 				<li><a href="ofertas.html">Ofertas</a></li>
-				<li><a href="contactos.html">Contactos</a></li>
+				<li class="active"><a href="contactos.html">Contactos</a></li>
 
 			  </ul>
 			  
@@ -172,10 +172,10 @@
 				<div class="panel-heading ">Siguenos</div>
 				<div class="panel-body">
   					<div class="btn-group-vertical" role="group" aria-label="...">
-   						<p><a class="btn btn-default btn-lg" href="#" role="button">Facebook</a></p>
-   						<p><a class="btn btn-default btn-lg" href="#" role="button">&nbsp;&nbsp;Twitter&nbsp;&nbsp;&nbsp;</a></p>
-   						<p><a class="btn btn-default btn-lg" href="#" role="button">&nbsp;&nbsp;&nbsp;&nbsp;RSS&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</a></p>
-   						<p><a class="btn btn-default btn-lg" href="#" role="button">&nbsp;&nbsp;&nbsp;E-Mail&nbsp;&nbsp;&nbsp;</a></p>
+   						<p><a class="btn btn-default btn-lg btn-block" href="#" role="button">Facebook</a></p>
+   						<p><a class="btn btn-default btn-lg btn-block" href="#" role="button">Twitter</a></p>
+   						<p><a class="btn btn-default btn-lg btn-block" href="#" role="button">RSS</a></p>
+   						<p><a class="btn btn-default btn-lg btn-block" href="#" role="button">E-Mail</a></p>
 					</div>
 				</div>
 				</div>
