--- a/curso2015/ejercicios/ej25-repaso/contactos.html
+++ b/curso2015/ejercicios/ej25-repaso/contactos.html
@@ -74,6 +74,29 @@
 			<div class="panel-body">
 
 
+		<div class="col-sm-5">		
+		<div class="btn-group btn-group-md btn-group-justified">
+			<div class="btn-group">
+				<button type="button" class="btn btn-default">Nuevo</button>
+			</div>
+			<div class="btn-group">
+				<button type="button" class="btn btn-primary dropdown-toggle" data-toggle="dropdown">Guardar&nbsp;<span class="caret"></span></button>
+				<ul class="dropdown-menu" role="menu">
+					<li><a href="#">Guardar y volver atr&aacute;s</a></li>
+					<li><a href="#">Guardar y crear nuevo</a></li>
+				</ul>
+			</div>
+    		<div class="btn-group">
+       			<button type="button" class="btn btn-danger">Eliminar</button>
+       		</div>
+       		<div class="btn-group">
+       			<button type="button" class="btn btn-link">Recargar</button>
+       		</div>
+		</div>
+		</div>
+		<hr>
+
+
 
 		<form class="form-horizontal" role="form">
 	
@@ -143,7 +166,7 @@
 
 		<div class="form-group">
 			<label for="color" class="control-label col-lg-1">Color de Smartphone favorita:</label>
-			<div class="col-lg-11">
+			<div class="col-lg-1">
 				<input type="color" class="form-control" id="color">
 			</div>
 		</div>
