--- a/curso2015/ejercicios/ej25-repaso/index.html
+++ b/curso2015/ejercicios/ej25-repaso/index.html
@@ -9,7 +9,39 @@
 	<script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
 
 	<style type="text/css">
-	#picScale:hover {
+	#picScale1:hover {
+		/* IE 9 */
+		-ms-transform: scale(20deg);
+		/* Safari */	
+		-webkit-transform: scale(20deg);
+		transform: scale(1.2,1.5);
+		transition: transform 2s;
+	}
+	#picScale2:hover {
+		/* IE 9 */
+		-ms-transform: scale(20deg);
+		/* Safari */	
+		-webkit-transform: scale(20deg);
+		transform: scale(1.2,1.5);
+		transition: transform 2s;
+	}
+	#picScale3:hover {
+		/* IE 9 */
+		-ms-transform: scale(20deg);
+		/* Safari */	
+		-webkit-transform: scale(20deg);
+		transform: scale(1.2,1.5);
+		transition: transform 2s;
+	}
+	#picScale4:hover {
+		/* IE 9 */
+		-ms-transform: scale(20deg);
+		/* Safari */	
+		-webkit-transform: scale(20deg);
+		transform: scale(1.2,1.5);
+		transition: transform 2s;
+	}
+	#picScale5:hover {
 		/* IE 9 */
 		-ms-transform: scale(20deg);
 		/* Safari */	
@@ -87,20 +119,19 @@
 			<div class="panel-heading ">Smartphone mas vendido en nuestra tienda</div>
 			<div class="panel-body">
 				<section>
-				<article>
 					<h2>Google Nexus 5</h2>
 					<em>Lorem ipsum dolor</em> sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui blandit praesent luptatum zzril delenit augue duis dolore te feugait nulla facilisi.<p>
 					Expetenda tincidunt in sed, ex partem placerat sea, porro commodo ex eam. His putant aeterno interesset at. Usu ea mundi tincidunt, omnium virtute <mark>aliquando ius ex</mark>. Ea aperiri sententiae duo. Usu nullam dolorum quaestio ei, sit vidit facilisis ea. Per ne impedit iracundia neglegentur. Consetetur neglegentur eum ut, vis animal legimus inimicus id.<p>
 					His audiam deserunt in, eum ubique voluptatibus te. In reque dicta usu. Ne rebum dissentiet eam, vim omnis deseruisse id. Ullum deleniti vituperata at quo, insolens complectitur te eos, ea pri dico munere propriae. Vel ferri facilis ut, qui paulo ridens praesent ad. Possim alterum qui cu. Accusamus consulatu ius te, cu decore soleat appareat usu.<p>
 
-					<center>
+
 					<figure style="text-align: center;">
-					<img id="picScale" src="media/nexus5.jpeg" alt="El Nexus 5"/>
+					<img id="picScale1" src="media/nexus5.jpeg" alt="El Nexus 5"/>
 					<figcaption>Google Nexus 5</figcaption>
 					</figure>
-					</center>
 
-					<p><p>His audiam deserunt in, eum ubique voluptatibus te. In reque dicta usu. Ne rebum dissentiet eam, vim omnis deseruisse id.</p>
+
+					<p>His audiam deserunt in, eum ubique voluptatibus te. In reque dicta usu. Ne rebum dissentiet eam, vim omnis deseruisse id.</p>
 
 					<details>
 						<summary>Especificacionesa principales del Nexus 5:</summary>
@@ -108,7 +139,7 @@
 							<li>Marca LG</li>
 							<li>Sistema operativo Android 4.4</li>
 							<li>Fabricante del procesador Qualcomm</li>
-						<ul>
+						</ul>
 					</details>
 
 
@@ -117,17 +148,16 @@
 					<div class="panel-heading ">Otros Smartphones que te puedan interesar.</div>
 					<div class="panel-body">
 
-					<div class="col-sm-3"><img id="picScale" src="media/nokia.jpeg" width="100px"  height="100px"></div>
-					<div class="col-sm-3"><img id="picScale" src="media/siemens.jpg" width="100px"  height="100px"></div>
-					<div class="col-sm-3"><img id="picScale" src="media/lg.jpg" width="100px" height="100px"></div>
-					<div class="col-sm-3"><img id="picScale" src="media/ericson.jpg" width="100px"  height="100px"></div>
+					<div class="col-sm-3"><img id="picScale2" src="media/nokia.jpeg" width="100"  height="100" alt="Nokia"></div>
+					<div class="col-sm-3"><img id="picScale3" src="media/siemens.jpg" width="100"  height="100" alt="Siemens"></div>
+					<div class="col-sm-3"><img id="picScale4" src="media/lg.jpg" width="100" height="100" alt="LG"></div>
+					<div class="col-sm-3"><img id="picScale5" src="media/ericson.jpg" width="100"  height="100" alt="Ericsson"></div>
 
 
 
 					</div>
-					</div
+					</div>
 
-				</article>	
 				</section>	
 			</div>
 			</div>
