Indice con recursos Modificados

--- a/curso2015/index.html
+++ b/curso2015/index.html
@@ -82,6 +82,8 @@
 	<li><a href="https://material.angularjs.org/latest" target="_blank">Material Design in Angular JS (Google)</a></li>
 	<li><a href="http://www.getmdl.io/index.html" target="_blank">Material Design Lite</a></li>
 	<li><a href="http://webcomponents.org" target="_blank">Web Components</a></li>
+	<li><a href="https://github.com/react-toolbox/react-toolbox" target="_blank">React Toolbox</a></li>
+
 </ul>
 
 <p>Recursos:
