MetS con Scroll en las dos columnas

--- a/MetS/index.html
+++ b/MetS/index.html
@@ -51,7 +51,7 @@
       <md-button class="menu" hide-gt-sm ng-click="ul.toggleList()" aria-label="Show User List Pecador">
         <md-icon md-svg-icon="menu" ></md-icon>
       </md-button>
-      <h1>Metabolic Syndrome - MetS</h1>
+      <h1>MetS</h1>
     </md-toolbar>
 
     <md-content flex="" tabIndex="-1" role="main" layout-padding="" class="md-whiteframe-z2">
