MetS Add Response via Dialog

--- a/MetS/index.html
+++ b/MetS/index.html
@@ -60,11 +60,11 @@
 
 
         <md-switch ng-model="user.cb1" aria-label="WtHR">
-          Is the WtHR (less than) < 0,55 ? {{ user.cb1 }}
+          Is WtHR less than 0,55 ? 
         </md-switch>
 
         <md-switch ng-model="user.cb2" aria-label="Switch 1">
-          Is Blood Pressure (less than) < 128/85 mm Hg ? {{ user.cb2 }}
+          Is Blood Pressure less than 128/85 mmHg ?
         </md-switch>
 
         <div ng-if="user.cb1 == true">
