Actualización de Recursos

--- a/curso2015/index.html
+++ b/curso2015/index.html
@@ -83,6 +83,8 @@
 	<li><a href="http://www.getmdl.io/index.html" target="_blank">Material Design Lite</a></li>
 	<li><a href="http://webcomponents.org" target="_blank">Web Components</a></li>
 	<li><a href="https://github.com/react-toolbox/react-toolbox" target="_blank">React Toolbox</a></li>
+	<li><a href="http://codepen.io/melnik909/pen/doeqzy" target="_blank">Material design for Bootstrap 3</a></li>
+
 
 </ul>
 
