Actualizado Contenido Completo

--- a/0BcYmmL4pj/index.html
+++ b/0BcYmmL4pj/index.html
@@ -281,7 +281,7 @@
                           </div> 
                           <div class="col-lg-6" ng-if="user.cb1 !== true">
                             <div ng-if="user.cb2 == true">
-                                <div class="alert alert-danger" role="alert">(6) Metabolic Syndrome: YES, Look for your Doctor</div>
+                                <div class="alert alert-danger" role="alert">(6) Metabolic Syndrome: YES, Look for your Occupational Safety and Health Dr.</div>
 
                               <!-- Low WtHR>=,55 :: Node 2 -->
                               <h4>Low WtHR greater o iqual to 0,55 - Node 2</h4>
