Actualizado Contenido Completo

--- a/0BcYmmL4pj/index.html
+++ b/0BcYmmL4pj/index.html
@@ -128,7 +128,7 @@
                               <span class="input-group-addon">
                               <input type="checkbox" aria-label="..." ng-model="user.cb2" value="{{user.cb1}}">
                               </span>
-                              <input type="text" class="form-control" value="Is Blood Pressure greater >= 128/85 mmHg ?" disabled>
+                              <input type="text" class="form-control" value="Is Blood Pressure >= 128/85 mmHg ?" disabled>
                             </div><!-- /input-group -->
                           </div><!-- /.col-lg-6 -->
                         </div>
