Modificaciones Tablas Valorations

--- a/0BcYmmL4pj/ht.html
+++ b/0BcYmmL4pj/ht.html
@@ -89,7 +89,7 @@
 
                           <h5>HT.</h5>
 
-                          <p>To measure BP, the recommendations in the Manual of Hypertension of the Spanish Society of Family Medicine14 were followed. BP was determined after a resting period of 10 minutes in the supine position using an automatic and calibrated sphygmomanometer (OMRON M3, OMRON Healthcare Europe, Spain). As indicated for the anthropo- metrical measures, BP was measured three times with a 1-minute gap between each measurement and an average value was calculated.</p>
+                          <p>To measure BP, the recommendations in the Manual of Hypertension of the Spanish Society of Family Medicine were followed. BP was determined after a resting period of 10 minutes in the supine position using an automatic and calibrated sphygmomanometer (OMRON M3, OMRON Healthcare Europe, Spain). As indicated for the anthropometrical measures, BP was measured three times with a 1-minute gap between each measurement and an average value was calculated.</p>
 
                         </div>
         
