--- a/0BcYmmL4pj/index.html
+++ b/0BcYmmL4pj/index.html
@@ -90,7 +90,7 @@
 
                         <h5>Implications for practice.</h5>
 
-                        <p>We have developed a new method for the screen- ing of MetS using non-invasive techniques and based on just two anthropometric variables: WtHR (⩾0.55) and BP (⩾128/85 mmHg). This method reduces the use of blood tests for those cases in which confirmation is required.</p>
+                        <p>We have developed a new method for the screening of MetS using non-invasive techniques and based on just two anthropometric variables: <strong>WtHR</strong> (⩾0.55) and <strong>BP</strong> (⩾128/85 mmHg). This method reduces the use of blood tests for those cases in which confirmation is required.</p>
 
                         <p>The new method has been proposed as a clinical decision tree composed of these two predictors (WtHR and BP). It is a versatile, economic and easily measurable method in any healthcare setting.</p>
 
