--- a/0BcYmmL4pj/sm.html
+++ b/0BcYmmL4pj/sm.html
@@ -89,13 +89,13 @@
 
                           <h5>Introduction.</h5>
 
-                          <p>Metabolic syndrome (MetS) is defined as a group of meta- bolic risk factors, characterised by central obesity, high arterial blood pressure (BP) and an impaired glucose (hyperglycaemia) and lipid (hypertriglyceridaemia and low high-density lipoprotein (HDL)-cholesterol) metabolism.</p>
+                          <p>Metabolic syndrome (MetS) is defined as a group of metabolic risk factors, characterised by central obesity, high arterial blood pressure (BP) and an impaired glucose (hyperglycaemia) and lipid (hypertriglyceridaemia and low high-density lipoprotein (HDL)-cholesterol) metabolism.</p>
 
-                          <p>MetS is closely linked to type 2 diabetes mellitus (DM), cardiovascular disease (CVD) and other cardiovascular risk factors that increase morbidity and mortality.2,3 The general increase in the prevalence of MetS over the past few decades has made it an urgent priority for public health services in all countries.</p>
+                          <p>MetS is closely linked to type 2 diabetes mellitus (DM), cardiovascular disease (CVD) and other cardiovascular risk factors that increase morbidity and mortality. The general increase in the prevalence of MetS over the past few decades has made it an urgent priority for public health services in all countries.</p>
 
-                          <p>With the aim of the early detection of MetS, a large amount of research has been carried out recently aimed at identifying predictors based on biomarkers of metabolic risk, such as systemic inflammation markers (C-reactive protein, leukocyte rate and subtypes), adipocytokines (lep- tin, adiponectin, tumour necrosis factor α), uric acid and bilirubin, etc.</p>
+                          <p>With the aim of the early detection of MetS, a large amount of research has been carried out recently aimed at identifying predictors based on biomarkers of metabolic risk, such as systemic inflammation markers (C-reactive protein, leukocyte rate and subtypes), adipocytokines (leptin, adiponectin, tumour necrosis factor α), uric acid and bilirubin, etc.</p>
 
-                          <p>In addition, the identification of abdominal obesity and, more specifically, the accumulation of visceral fat as a key factor in the pathogenesis of insulin resistance and the onset of MetS has led to a body of research aim- ing to link MetS to anthropometric measurements of obesity such as body mass index (BMI), waist circum- ference (WC), waist–hip index, waist–height index, etc.10–12 However, the heterogeneity of the populations studied has meant that consensus and agreement in the results differ widely.</p>
+                          <p>In addition, the identification of abdominal obesity and, more specifically, the accumulation of visceral fat as a key factor in the pathogenesis of insulin resistance and the onset of MetS has led to a body of research aiming to link MetS to anthropometric measurements of obesity such as body mass index (BMI), waist circumference (WC), waist–hip index, waist–height index, etc. However, the heterogeneity of the populations studied has meant that consensus and agreement in the results differ widely.</p>
 
                           <p>Occupational health nursing is actively involved in the promotion of health programmes at the workplace for the prevention of CVDs, focusing on the control of main risk factors: obesity, hypertension, hyperlipidaemia, smoking, balanced diet and physical activity.</p>
 
